Added admin email template and others bug fixes. Ready for QA.

--- a/Fyxme/Content/MailTemplates/MailSendAdminConfirmRequestReceived.html
+++ b/Fyxme/Content/MailTemplates/MailSendAdminConfirmRequestReceived.html
@@ -336,15 +336,13 @@
                     <table cellspacing="0" cellpadding="0" width="600" class="w320">
                         <tr>
                             <td class="header-lg">
-                                We've received your request!
+                                You have a new request!
                             </td>
                         </tr>
                         <tr>
                             <td class="free-text">
-								<p>Hello {1} {2},</p>
-                                <p>We appreciate you taking the time to submit your information and are committed to providing you with an easy and seamless car repair experience.</p>
-                                <p>We will be following up with you shortly with your quote and car technician details. You can be assured of receiving a premium service at a very competitive price.</p>
-                                <p>Should you decide to move forward with our service, a mobile car technician will come directly to you, at home or work and  on your own schedule.</p>
+								<p>Hi,</p>
+                                <p>You have received a new request. Please find below the posted information.</p>
                            </td>
                         </tr>
                         <tr>
@@ -359,13 +357,21 @@
                                                             <tr>
                                                                 <td class="mini-block">
                                                                     <span class="header-sm">Case Number</span><br />
-                                                                    {3} <br /><br />
-																	<span class="header-sm">Your Email</span><br />
-                                                                    {4} <br /><br />
+                                                                    {1}<br /><br />
+                                                                    <span class="header-sm">Full Name</span><br />
+                                                                    {2} {3}<br /><br />
+																	<span class="header-sm">Email</span><br />
+                                                                    {4}<br /><br />
 																	<span class="header-sm">Phone Number</span><br />
-                                                                    {5} <br /><br />
+                                                                    {5}<br /><br />
+                                                                    <span class="header-sm">Zip Code</span><br />
+                                                                    {6}<br /><br />
+                                                                    <span class="header-sm">Car model</span><br />
+                                                                    {7} {8} {9}<br /><br />
                                                                     <span class="header-sm">Description</span><br />
-                                                                    {6} <br />
+                                                                    {10}<br /><br />
+                                                                    <span class="header-sm">Pictures</span><br />
+                                                                    {11}<br />
                                                                 </td>
                                                             </tr>
                                                         </table>
