Tech page updates

--- a/Fyxme/Content/MailTemplates/MailSendLeadConfirmRequestReceived.html
+++ b/Fyxme/Content/MailTemplates/MailSendLeadConfirmRequestReceived.html
@@ -360,8 +360,8 @@
                                                                 <td class="mini-block">
                                                                     <span class="header-sm">Case Number</span><br />
                                                                     {3} <br /><br />
-																	<span class="header-sm">Your Email</span><br />
-                                                                    {4} <br /><br />
+																	<!--<span class="header-sm">Your Email</span><br />
+                                                                    {4} <br /><br />//-->
 																	<span class="header-sm">Phone Number</span><br />
                                                                     {5} <br /><br />
                                                                     <span class="header-sm">Description</span><br />
