Added AboutUs page and Privacy Policy

--- a/Fyxme/Content/MailTemplates/MailSendLeadConfirmRequestReceived.html
+++ b/Fyxme/Content/MailTemplates/MailSendLeadConfirmRequestReceived.html
@@ -394,9 +394,7 @@
                     <table cellspacing="0" cellpadding="0" width="600" class="w320">
                         <tr>
                             <td style="padding: 25px 0 25px">
-                                <strong>fyxme.com</strong><br />
-                                1234 street St <br />
-                                Los Angeles <br /><br />
+                                <strong>fyxme.com</strong>
                             </td>
                         </tr>
                     </table>
